--- a/contactsProject/frontend/styless/style.css
+++ b/contactsProject/frontend/styless/style.css
@@ -21,6 +21,7 @@ body {
   border-radius: 16px;
   padding: 40px;
   width: 90%;
+  margin-top: 20px;
   max-width: 700px;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(6px);
